--- a/public/global.css
+++ b/public/global.css
@@ -13,7 +13,7 @@ body {
     font-weight: 300;
     display: grid;
     place-items: center;
-    background-image: url('/bg.jpg');
+    background-image: url('/bg2.jpg');
     overflow: hidden;
     font-size: 100%;
 }
