--- a/public/global.css
+++ b/public/global.css
@@ -13,12 +13,20 @@ body {
     font-weight: 300;
     display: grid;
     place-items: center;
-    background-image: url('/bg2.jpg');
     overflow: hidden;
     font-size: 100%;
 }
-  @media (max-width: 500px) {
-   html {
-       font-size: 90%;
-   }
-  }
+
+.bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+@media (max-width: 500px) {
+html {
+   font-size: 90%;
+}
+}
