--- a/public/global.css
+++ b/public/global.css
@@ -16,7 +16,14 @@ body {
     overflow: hidden;
     font-size: 100%;
 }
-
+.backdrop {
+    position: absolute;
+    inset: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 100;
+  }
 .bg {
     position: absolute;
     top: 0;
@@ -25,6 +32,14 @@ body {
     width: 100%;
     object-fit: cover;
 }
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
   ::-webkit-scrollbar {
     width: 5px;
   }
