--- a/public/global.css
+++ b/public/global.css
@@ -19,8 +19,8 @@ body {
 .backdrop {
     position: absolute;
     inset: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 100;
   }
