--- a/public/global.css
+++ b/public/global.css
@@ -19,10 +19,11 @@ body {
 .backdrop {
     position: absolute;
     inset: 0;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 100;
+    overflow: hidden;
   }
 .bg {
     position: absolute;
