--- a/public/global.css
+++ b/public/global.css
@@ -17,7 +17,7 @@ body {
     font-size: 100%;
 }
 .backdrop {
-    position: absolute;
+    position: fixed;
     inset: 0;
     height: 100vh;
     width: 100vw;
