--- a/public/global.css
+++ b/public/global.css
@@ -41,19 +41,26 @@ body {
     -ms-user-select: none;
     user-select: none;
   }
-  ::-webkit-scrollbar {
+
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: rgba(155, 155, 155, .5 ) transparent;
+}
+
+*::-webkit-scrollbar {
     width: 5px;
-  }
+}
 
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 1em;
-  }
+*::-webkit-scrollbar-track {
+    background: transparent;
+}
 
-  ::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    border-radius: 1em;
-  }
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, .5 );
+    border-radius: 20px;
+    border: transparent;
+}
+
 @media (max-width: 500px) {
 html {
    font-size: 90%;
